# devbio-napari

./: LICENSE  README.md  requirements.txt  setup.cfg  tox.ini
.github/workflows/: git-bob.yml  test_and_deploy.yml
devbio/: __init__.py  __main__.py  _viewer.py
devbio/_tests/: test_nothing.py
devbio_napari/: __init__.py  _viewer.py
devbio_napari/_tests/: test_nothing.py
installer/: Readme.md  construct.yaml  devbio-napari-icon.svgz
installer/Mac/: construct.yaml  create_app.sh
installer/Mac/devbio-napari.app/Contents/: Info.plist
installer/Mac/devbio-napari.app/Contents/Resources/: droplet.icns  droplet.rsrc  napari
installer/Mac/devbio-napari.app/Contents/Resources/Scripts/: main.scpt
installer/Mac/devbio-napari.app/Contents/Resources/description.rtfd/: TXT.rtf
installer/Win/: construct.yaml  install_menu_shortcut.bat  shortcut.json  uninstall_menu_shortcut.bat
