[metadata]
name = devbio-napari
version = 0.1.3
author = Robert Haase
author_email = robert.haase@tu-dresden.de
license = BSD-3
url = https://github.com/haesleinhuepf/devbio-napari
description = A collection of napari plugins useful for studying developmental biology
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Framework :: napari
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/devbio-napari/issues
    Documentation = https://github.com/haesleinhuepf/devbio-napari#README.md
    Source Code = https://github.com/haesleinhuepf/devbio-napari
    User Support = https://github.com/haesleinhuepf/devbio-napari/issues

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    napari-pyclesperanto-assistant
    napari-skimage-regionprops
    napari-animation
    napari-aicsimageio
    PlatyMatch
    napari-plot-profile
    napari-manual-split-and-merge-labels
    napari-accelerated-pixel-and-object-classification
    napari-brightness-contrast
    napari-ome-zarr
    napari-itk-io
    napari-plugin-search
    napari-segment-blobs-and-things-with-membranes
    napari-folder-browser

[options.entry_points] 
napari.plugin = 
    devbio = devbio
