[metadata]
name = devbio-napari
version = 0.2.0
author = Robert Haase
author_email = robert.haase@tu-dresden.de
license = BSD-3
url = https://github.com/haesleinhuepf/devbio-napari
description = A bundle of napari plugins useful for 3D+t image processing and analysis for studying developmental biology.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Framework :: napari
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/devbio-napari/issues
    Documentation = https://github.com/haesleinhuepf/devbio-napari#README.md
    Source Code = https://github.com/haesleinhuepf/devbio-napari
    User Support = https://github.com/haesleinhuepf/devbio-napari/issues

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy>=1.21.4
    napari-pyclesperanto-assistant
    napari-skimage-regionprops
    napari-animation
    napari-aicsimageio
    PlatyMatch
    napari-plot-profile
    napari-accelerated-pixel-and-object-classification
    napari-brightness-contrast
    napari-ome-zarr
    napari-itk-io
    napari-plugin-search
    napari-segment-blobs-and-things-with-membranes
    napari-simpleitk-image-processing
    napari-folder-browser
    napari-crop
    napari-clusters-plotter
    napari-tabu
    redlionfish
    napari-workflow-optimizer
    napari-curtain
    napari-3d-ortho-viewer
    cellpose-napari
    # https://github.com/MouseLand/cellpose-napari/issues/21
    # https://forum.image.sc/t/error-when-using-the-napari-cellpose-plugin/63360/2
    cellpose==0.6.5

[options.entry_points] 
napari.plugin = 
    devbio_napari = devbio_napari
console_scripts =
    devbio-napari = devbio_napari:main
