[metadata]
name = devbio-napari
version = 0.7.1
author = Robert Haase
author_email = robert.haase@tu-dresden.de
license = BSD-3
url = https://github.com/haesleinhuepf/devbio-napari
description = A bundle of napari plugins useful for 3D+t image processing and analysis for studying developmental biology.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Framework :: napari
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/devbio-napari/issues
    Documentation = https://github.com/haesleinhuepf/devbio-napari#README.md
    Source Code = https://github.com/haesleinhuepf/devbio-napari
    User Support = https://github.com/haesleinhuepf/devbio-napari/issues

[options]
packages = find:
python_requires = >=3.8

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy>=1.21.4
    napari-pyclesperanto-assistant
    napari-skimage-regionprops
    napari-animation
    PlatyMatch
    napari-plot-profile
    napari-accelerated-pixel-and-object-classification
    napari-brightness-contrast
    napari-plugin-search
    napari-segment-blobs-and-things-with-membranes
    napari-simpleitk-image-processing
    napari-folder-browser
    napari-crop
    napari-clusters-plotter
    napari-tabu
    napari-workflow-optimizer
    napari-workflow-inspector
    napari-curtain
    cellpose-napari
    napari-layer-details-display
    # https://github.com/napari/napari/issues/4415
    # https://github.com/napari/napari/issues/4708
    napari<=0.4.15
    vispy<=0.9.6
    napari-mouse-controls
    the-segmentation-game
    napari-process-points-and-surfaces
    napari-blob-detection
    jupyterlab
    napari-czifile2
    napari-roi
    pydantic!=1.10.0 # https://twitter.com/Czaki_PL/status/1564908046186434566?s=20&t=YEAgvsUTuYIDRYlKREQp3A
    napari-pystackreg
    imageio!=2.22.1 # https://github.com/napari/napari/pull/5168
    redlionfish

[options.entry_points] 
napari.plugin = 
    devbio_napari = devbio_napari
console_scripts =
    devbio-napari = devbio_napari:main
